2006-05-26  Carlos Garnacho  <carlosg@gnome.org>

	* system-tools-backends.conf.in: make dbus access file open for
	testing purposes, and do not use stuff that potentially crashes the
	DBus daemon

2006-05-26  Carlos Garnacho  <carlosg@gnome.org>

	* UsersConfig.pm: added default group. -1 will mean "create new group
	for the user"
	* Users/Groups.pm: use addgroup/delgroup if available
	* Users/Users.pm: use adduser/deluser if available, translate default
	group to GIDs. Do not use a global variable getting the configuration,
	some values may survive several get() calls

2006-05-20  Carlos Garnacho  <carlosg@gnome.org>

	* configure.in: fix problem expanding paths, detect Net::DBus, and
	also allow to specify a non-standard perl library dir for it with
	--with-net-dbus
	* SystemToolsBackends.pl.in: include scriptsdir and netdbusdir in @INC

2006-05-19  Carlos Garnacho  <carlosg@gnome.org>

	* system-tools-backends.conf.in: added, prototype file for DBus
	system.d dir.
	* .cvignore: updated.
	* Makefile.am: install, clean and package
	system-tools-backends.conf.in.
	* configure.in: small improvements, add --with-dbus-sys=<dir> and
	--with-stb-group=<group>

2006-05-15  Carlos Garnacho  <carlosg@gnome.org>

	* Makefile.am, autogen.sh: do not intltoolize things, do not delete
	.pm files in clean

2006-05-15  Carlos Garnacho <carlosg@gnome.org>

	* po/*.po, po/POTFILES.*, po/ChangeLog: nuked, no more translations in
	HEAD, huge thanks to all contributors until now
	* ABOUT-NLS: removed too

2006-05-15  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Merged the waiting-the-dbus branch into HEAD

	* configure.in, Makefile.am, autogen.sh: bump to 1.9.0, do not use
	translations (no longer needed) and fix references to the new .pc file

	* GroupsConfig.pm, HostsConfig.pm, IfacesConfig.pm, NFSConfig.pm,
	NTPConfig.pm, SMBConfig.pm, ServicesConfig.pm, ServicesList.pm,
	SharesList.pm, SystemToolsBackends.pl.in, TimeConfig.pm, 