@@ -80,6 +80,7 @@ sub get_config_file ()
 
     "freebsd-5"       => "redhat-6.2",
     "freebsd-6"       => "redhat-6.2",
+    "freebsd-7"       => "redhat-6.2",
   );
 
   my %dist_table =
